Project

General

Profile

Actions

Bug #37680

closed

osd/PrimaryLogPG: fix the extent length error of the sync read

Added by Xiaofei Cui over 5 years ago. Updated about 5 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
-
Category:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
luminous,mimic
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

The extent.length of the sync read is changed to 0, when
the read is failed. This makes the retry of the read with
a offset of 0 to read the total object.
Let the extent.length as it is, if the return code is -EAGAIN,
which will make the read try again later with the correct
extent.length.


Related issues 2 (0 open2 closed)

Copied to Ceph - Backport #37755: mimic: osd/PrimaryLogPG: fix the extent length error of the sync readResolvedJos CollinActions
Copied to Ceph - Backport #37756: luminous: osd/PrimaryLogPG: fix the extent length error of the sync readResolvedAshish SinghActions
Actions #1

Updated by xie xingguo over 5 years ago

  • Backport set to luminous,mimic
Actions #2

Updated by Kefu Chai over 5 years ago

  • Status changed from New to Pending Backport
Actions #3

Updated by Nathan Cutler over 5 years ago

  • Copied to Backport #37755: mimic: osd/PrimaryLogPG: fix the extent length error of the sync read added
Actions #4

Updated by Nathan Cutler over 5 years ago

  • Copied to Backport #37756: luminous: osd/PrimaryLogPG: fix the extent length error of the sync read added
Actions #5

Updated by Nathan Cutler about 5 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF